Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/V3d/V3dView.h

extern "C" DECL_EXPORT void V3d_View_SetViewOrientation(void* instance, void* value);
extern "C" DECL_EXPORT void* V3d_View_ViewOrientation(void* instance);
extern "C" DECL_EXPORT bool V3d_View_TransientManagerBeginAddDraw(void* instance);
extern "C" DECL_EXPORT bool V3d_View_AnimationModeIsOn(void* instance);
extern "C" DECL_EXPORT bool V3d_View_DegenerateModeIsOn(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetComputedMode(void* instance, bool value);
extern "C" DECL_EXPORT bool V3d_View_ComputedMode(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetPlotter(void* instance, void* value);
extern "C" DECL_EXPORT void V3d_View_SetGridGraphicValues(void* instance, void* value);
extern "C" DECL_EXPORT void V3d_View_SetGridActivity(void* instance, bool value);
extern "C" DECL_EXPORT void V3d_View_SetProjModel(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_ProjModel(void* instance);
extern "C" DECL_EXPORT void V3d_View_SetBackFacingModel(void* instance, int value);
extern "C" DECL_EXPORT int V3d_View_BackFacingModel(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsDepthTestEnabled(void* instance);
extern "C" DECL_EXPORT bool V3d_View_IsGLLightEnabled(void* instance);
extern "C" DECL_EXPORT void V3dView_Dtor(void* instance);