Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/V3d/V3dView.cs

		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetViewOrientation(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_View_ViewOrientation(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_TransientManagerBeginAddDraw(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_AnimationModeIsOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_DegenerateModeIsOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetComputedMode(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_ComputedMode(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetPlotter(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetGridGraphicValues(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetGridActivity(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetProjModel(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_ProjModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_View_SetBackFacingModel(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_View_BackFacingModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IsDepthTestEnabled(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_View_IsGLLightEnabled(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public V3dView() { } 

		public V3dView(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{ V3dView_Dtor(Instance); }

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void V3dView_Dtor(IntPtr instance);
	}
}
